2012-06-22  Oliver Hader  <oliver.hader@typo3.org>

	* [FEATURE] #38296: Enabled autoload builder to consider TYPO3 6.0 scheme
	* [FEATURE] #38299: Detect duplicate class definitions
	* [BUGFIX] #37241: Test for case insensitive filesystem always failes (thanks to Andreas Kiessling)
	* [BUGFIX] #38299: Follow-up to duplicated class definition check

2012-01-31  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [TASK] Add xml:space="preserve" to trans-units when converting ll-XML to XLIFF

2011-12-29  Oliver Hader  <oliver.hader@typo3.org>

	* [BUGFIX] Ensure that autoload registry is sorted by class name

2011-10-18  Oliver Hader  <oliver.hader@typo3.org>

	* [TASK] Release of version 3.3.1

2011-10-18  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [BUGFIX] #26082: ext_autoload.php generation has problems with case of Classes folder
	* [TASK] #30539: ext_autoload.php output can be improved
	* [BUGFIX] #27257: Sprite Generation throws exception in TYPO3 4.6
	* [BUGFIX] #31034: English XLIFF should only contain source element
	* [BUGFIX] #30876: ll-XML to XLIFF conversion fails in TYPO3 4.5

2011-10-10  Oliver Hader  <oliver.hader@typo3.org>

	* [TASK] Release of version 3.3.0

2011-10-10  Oliver Hader  <oliver.hader@typo3.org>

	* [BUGFIX] Change date attribute to use ISO 8601 format

2011-08-29  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [TASK] Local override of ll-XML files is not supported

2011-08-26  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element

2011-08-24  Xavier Perseguers  <xavier.perseguers@typo3.org>

	* [FEATURE] #29222: Add conversion tool for ll-XML -> XLIFF
	* [CLEANUP] Remove global declarations

2011-03-16  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #13452: Using PHP 5.3 deprecated function ereg
	* Cleanup: Fixed variable assignment

2011-03-15  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #13040: Module name is not passed along in links
